--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
           <div class="icons">
             <div class="social-media-icons">
               <div class="centerdiv">
-                <!-- <a
-                    href="https://www.facebook.com/paarth.kothari.1/"
+                <a
+                    href="https://www.facebook.com/rudramaurya837?mibextid=ZbWKwL"
                     target="_blank"
                   >
                     <i class="fa fa-2x fa-facebook"></i>
-                  </a> -->
+                  </a>
 
-                <!-- <a
-                    href="https://www.instagram.com/paarthkothari/"
+                <a
+                    href="https://www.instagram.com/itz_rudra_926?igsh=OTh5OTJwOG1vYnJv"
                     target="_blank"
                   >
                     <i class="fa fa-2x fa-instagram"></i>
-                  </a> -->
+                  </a>
 
                 <a href="https://github.com/rudram837" target="_blank">
                   <i class="fa fa-2x fa-github"></i>
