--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
         <div class="column right">
           <p>
             I am Rudra Maurya, pursuing degree from Nirmala Memorial Foundation College of Commerce and Science 
-            BSc. in Computer Science. Currently, Iam interning at Hitachi Vantara, specializing in SAP - BI &
-            Analytics. I'm passionate about Full-Stack Web Development, and
+            BSc. in Computer Science. Currently, I'm passionate about Full-Stack Web Development, and
             problem-solving. Beyond my professional
             pursuits, I enjoy solving the Rubik's Cube and badminton.
           </p>
